sizing error on heading fixed using media query on smaller devices, more styling added to button and paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,25 @@ h1 {
     border: dashed;
     border-color: darkgreen;
     font-size: 3rem;
+    width: auto;
+}
+
+/*Main body styling*/
+
+#braintraining {
+    font-size: 2rem;
+}
+
+#result {
+    margin-top: 1.2rem;
+}
+
+/*Button Styling*/
+
+#instructionsbutton {
+    font-size: 1.3rem;
+    margin-bottom: 1.2rem;
+    background-color: darkgreen;
 }
 
 /*Grid Styling*/
@@ -22,3 +41,12 @@ h1 {
     width: 400px ;
     box-sizing: border-box;
 }
+
+/*Media queries*/
+
+@media screen and (max-width: 510px) {
+    h1 {
+         font-size: 2rem;
+         padding: 1rem;
+        }
+    }
